# NeuroSploitV2

./: .env.example  .gitignore  README.md  RELEASE.md  TUTORIAL.md  docker-compose.yml  install.ps1  neurosploit  pyproject.toml  rebuild.sh  setup.sh
agents_md/: REGISTRY.md
agents_md/ai/: llm_excessive_agency.md  llm_improper_output_handling.md  llm_indirect_prompt_injection.md  llm_jailbreak.md  llm_misinformation.md  llm_prompt_injection_direct.md  llm_rag_embedding_weakness.md  llm_sensitive_info_disclosure.md  llm_supply_chain.md  llm_system_prompt_leak.md  llm_unbounded_consumption.md  mcp_excessive_permissions.md  mcp_tool_poisoning.md  mcp_unsafe_tool_execution.md  n8n_ai_node_audit.md  n8n_workflow_audit.md  skill_injection_surface.md  skill_plugin_audit.md
agents_md/infra/: ad_acl_privesc.md  ad_asreproasting.md  ad_dcsync.md  ad_default_creds.md  ad_kerberoasting.md  (+9 more)
backend/: main.py
config/: config2.json
core/: llm_manager.py
data/: adaptive_learning.json  providers.json  reasoning_memory.json
docker/: Dockerfile.kali  Dockerfile.sandbox
legacy/: README.md  neurosploit_legacy.py
neurosploit-rs/: Cargo.toml  creds.example.yaml
neurosploit-rs/app/: Cargo.toml
neurosploit-rs/app/src/: main.rs  repl.rs  tui.rs
neurosploit_agent/: __init__.py  agent_loader.py  backends.py  cli.py  config.py  mcp.py  models.py  orchestrator.py  rl.py
prompts/: task_library.json
reports/: test_run_20260211_163558.json
scripts/: build-kali.sh  build_agents.py  build_ai_agents_v360.py  build_infra_agents.py
webgui/: index.html  server.py
(+232 files in other folders)
